# MinterMC

./: .gitignore  CONTRIBUTING.md  README.md  build.gradle.kts  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.md  new_feature.md  protocol_enhancement.md
examples/c/: CMakeLists.txt  join.cpp
examples/js/: join.js  join_be.js  join_je_multiple.js  package-lock.json  package.json
examples/python/: bot_service_pb2.py  bot_service_pb2_grpc.py  join.py  join_je_multiple.py
mintermc-adapter-bedrock/: build.gradle.kts
mintermc-adapter-bedrock/src/main/java/net/mcsmash/mintermc/adapter/bedrock/: BedrockEditionBotSession.java
mintermc-adapter-java/: build.gradle.kts
mintermc-adapter-java/src/main/java/net/mcsmash/mintermc/adapter/java/: JavaEditionBotSession.java
mintermc-core/: build.gradle.kts
mintermc-core/src/main/java/net/mcsmash/mintermc/core/: BotManager.java  BotOptions.java  BotSession.java  BotSessionFactory.java  MinterBotServiceImpl.java  PluginManager.java
mintermc-plugin-api/: build.gradle.kts
mintermc-plugin-api/src/main/java/net/mcsmash/mintermc/api/: Bot.java  MinterPlugin.java
mintermc-plugin-api/src/main/java/net/mcsmash/mintermc/api/block/: Block.java
mintermc-protocol/: build.gradle.kts
mintermc-protocol/src/main/proto/: bot_service.proto
mintermc-server/: build.gradle.kts
mintermc-server/src/main/java/net/mcsmash/mintermc/server/: MinterServer.java
mintermc-test-client/: build.gradle.kts
mintermc-test-client/src/main/java/net/mcsmash/mintermc/testclient/: TestClient.java
(+5 files in other folders)
